Added Dependency Injection, created more Views and ViewModels for them and changed db inicialization method call

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -11,79 +11,6 @@
         
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-
-        <TextBox x:Name="textBoxMain" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" TextWrapping="Wrap" AcceptsReturn="True" 
-                 VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" 
-                 ScrollViewer.CanContentScroll="True"
-                 IsReadOnly="True" Text = "{Binding MainText, UpdateSourceTrigger = PropertyChanged}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Grid.IsSharedSizeScope="True" Padding="1,1,1,1" Margin="20,0,115,1"/>
-
-        <Button x:Name="buttonChooseFile" Grid.Column="3" Grid.Row="0" Command="{Binding ReadCsvFileCommandAndAddToBD}" Content="Открыть" VerticalAlignment="Top" HorizontalAlignment="Right" MinHeight="25" MinWidth="65" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0,20,30,0"/>
-        <Button x:Name="buttonExport" Grid.Column="3" Grid.Row="1" Command="{Binding ExportIntoFile}" Content="Экспорт" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,30,20" MinWidth="65" MinHeight="25" />
-
-        <DatePicker x:Name="datePicker" Grid.Column="1" Grid.Row="1"
-                    SelectedDate="{Binding DatePicker}" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalAlignment="Left" Margin="95,55,0,0" MinHeight="25" MinWidth="155"/>
-
-        <TextBox x:Name="textBoxFirstName" Grid.Column="0" Grid.Row="1"
-                 Text="{Binding FirstNameTextBox, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True}"
-                 VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalAlignment="Left" MinHeight="25" MinWidth="155" Margin="95,55,0,0"/>
-        <TextBox x:Name="textBoxLastName" Grid.Column="0" Grid.Row="1"
-                 Text="{Binding LastNameTextBox, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True}" 
-                 VerticalAlignment="Top" VerticalContentAlignment="Center" MinHeight="25" MinWidth="155" HorizontalAlignment="Left" Margin="95,90,0,0"/>
-        <TextBox x:Name="textBoxPatronymic" Grid.Column="0" Grid.Row="1"
-                 Text="{Binding PatronymicTextBox, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True}" 
-                 VerticalAlignment="Top" VerticalContentAlignment="Center" MinWidth="155" MinHeight="25" HorizontalAlignment="Left" Margin="95,125,0,0"/>
-        <TextBox x:Name="textBoxCity" Grid.Column="1" Grid.Row="1"
-                 Text="{Binding CityTextBox, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True}" 
-                 VerticalAlignment="Top" VerticalContentAlignment="Center" MinWidth="155" MinHeight="25" HorizontalAlignment="Left" Margin="95,90,0,0"/>
-        <TextBox x:Name="textBoxCountry" Grid.Column="1" Grid.Row="1"
-                 Text="{Binding CountryTextBox, UpdateSourceTrigger=PropertyChanged, ValidatesOnExceptions=True}" 
-                 VerticalAlignment="Top" VerticalContentAlignment="Center" MinWidth="155" MinHeight="25" Margin="95,125,0,0" HorizontalAlignment="Left"/>
-
-        <TextBox x:Name="textBoxFileName" Grid.Column="2" Grid.Row="1"
-                 Text="{Binding FileNameTextBox}" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" HorizontalAlignment="Left" Margin="10,55,0,0" MinHeight="25" MinWidth="225" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="True"/>
-
-        <Label x:Name="labelFirstName" Grid.Column="0" Grid.Row="1" Content="Имя:" HorizontalContentAlignment="Stretch" 
-               VerticalContentAlignment="Stretch" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20,55,0,0" MinHeight="25" MinWidth="65"/>
-        <Label x:Name="labelLastName" Grid.Column="0" Grid.Row="1" Content="Фамилия:" HorizontalAlignment="Left" 
-               VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="20,90,0,0" MinHeight="25" MinWidth="65"/>
-        <Label x:Name="labelPatronymic" Grid.Column="0" Grid.Row="1" Content="Отчество:" 
-               HorizontalAlignment="Left" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="18,125,0,0" MinHeight="25" MinWidth="65"/>
-
-        <Label x:Name="labelDate" Grid.Column="1" Grid.Row="1" Content="Дата:" HorizontalAlignment="Left" 
-               VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="20,55,0,0" MinHeight="25" MinWidth="65"/>
-        <Label x:Name="labelCity" Grid.Column="1" Grid.Row="1" Content="Город:" HorizontalAlignment="Left" 
-               VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="20,90,0,0" MinHeight="25" MinWidth="65"/>
-        <Label x:Name="labelCountry" Grid.Column="1" Grid.Row="1" Content="Страна:" HorizontalAlignment="Left" 
-               VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="20,125,0,0" MinHeight="25" MinWidth="65"/>
-
-
-        <Label x:Name="labelFileName" Grid.Column="2" Grid.Row="1" Content="Имя файла:" HorizontalAlignment="Left" 
-               VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="10,20,0,0" MinHeight="25" MinWidth="100"/>
-        <Label x:Name="labelFileType" Grid.Column="2" Grid.Row="1" Content="Тип файла:" HorizontalAlignment="Left" 
-               VerticalAlignment="Center" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="10,0,0,0" MinWidth="120" MinHeight="25"/>
-
-        <Label x:Name="labelExplanation" Grid.Column="0" Grid.Row="1" Content="Введите данные для выборки для экспорта:" 
-               HorizontalAlignment="Center" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="0,20,0,0"/>
-
-        <RadioButton x:Name="radioButtonExcel" Grid.Column="2" Grid.Row="1"
-                     Command="{Binding SelectFileFormat}" CommandParameter=".xlsx"
-                     Content="Excel файл (.xlsx)" 
-                     HorizontalAlignment="Left" VerticalAlignment="Top" 
-                     HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="10,125,0,0" MinHeight="15" MinWidth="120"/>
-        <RadioButton x:Name="radioButtonXml" Grid.Column="2" Grid.Row="1"
-                     Command="{Binding SelectFileFormat}" CommandParameter=".xml"
-                     Content="XML файл (.xml)" 
-                     HorizontalAlignment="Left" VerticalAlignment="Top" 
-                     HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Margin="10,150,0,0" MinWidth="120" MinHeight="15"/>
-
+        <Frame Source="/View/Pages/MenuPage.xaml" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
