--- a/View/Pages/ViewingPage.xaml
+++ b/View/Pages/ViewingPage.xaml
@@ -4,6 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WpfApp1.View.Pages"
+      
+      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+      
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ViewingPage"
@@ -14,10 +17,6 @@
             <RowDefinition Height="70"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="100"/>
-        </Grid.ColumnDefinitions>
 
         <Button Content="Back" Grid.Column="0" Grid.Row="0"
         Command="NavigationCommands.BrowseBack" 
@@ -33,12 +32,11 @@
          HorizontalAlignment="Center" VerticalAlignment="Top"
          />
 
-        <Button x:Name="buttonChooseFile" Content="Выборка"  
-        Grid.Column="1" Grid.Row="1"
-        Command="{Binding ShowSelectionCommand}"
-        VerticalAlignment="Top" HorizontalAlignment="Left" 
-        MinHeight="25" MinWidth="65"
-        HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Loaded">
+                <i:InvokeCommandAction Command="{Binding ShowSelectionCommand}" />
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
 
     </Grid>
 </Page>
