--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,23 +3,16 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1" 
-        
-        xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-      
+        xmlns:local="clr-namespace:WpfApp1"      
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800"
         WindowStartupLocation="CenterScreen">
 
 
     <Grid>
+        <Image Source="/View/Images/SplashScreen.jpg"/>
         <Frame Source="/View/Pages/MenuPage.xaml" NavigationUIVisibility="Hidden"/>
-
-        <i:Interaction.Triggers>
-            <i:EventTrigger EventName="Loaded">
-                <i:InvokeCommandAction Command="{Binding InitializeDBCommand}" />
-            </i:EventTrigger>
-        </i:Interaction.Triggers>
+        
         
     </Grid>
 </Window>
